manifests/kustomize/env/openshift-tmp/api-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - env:
            - name: V2_DRIVER_IMAGE
              value: quay.io/hukhan/kfp-driver:pr-10625
            - name: V2_LAUNCHER_IMAGE
              value: quay.io/hukhan/kfp-launcher:pr-10625
          name: ml-pipeline-api-server
      serviceAccountName: ml-pipeline
