manifests/kustomize/env/openshift-tmp/cache-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache-server
    application-crd-id: kubeflow-pipelines
  name: cache-server
  namespace: kubeflow
spec:
  replicas: 0
