manifests/kustomize/env/openshift-tmp/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
  labels:
    app: ml-pipeline-ui
spec:
  to:
    kind: Service
    name: ml-pipeline-ui
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
